@@ -119,6 +119,8 @@ Bug Fixes
   
 * SOLR-7512: SolrOutputFormat creates an invalid solr.xml in the solr home zip for MapReduceIndexerTool.
   (Mark Miller, Adam McElwee)
+
+* SOLR-7652: Fix example/files update-script.js to work with Java 7 (ehatcher)
   
 Other Changes
 ----------------------
